--- a/01-basics/01-CounterButton/index.html
+++ b/01-basics/01-CounterButton/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <!-- Решение -->
+<button id="btn" @click="clickHandler">{{ value }}</button>
 
 <script type="module" src="script.js"></script>
 </body>
